# superXO

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yaml  nginx.conf
.github/: ci.yml
.github/workflows/: ci.yml  jekyll-gh-pages.yml
game-page/: Dockerfile  package-lock.json  package.json  webpack.config.js
game-page/src/: index.html
game-page/src/scripts/: board-layout.js  board-logic.js  cookie.js  coord.js  field-layout.js  game-logic.js  (+7 more)
middleware/: Dockerfile  board.go  go.mod  go.sum  handlers.go  main.go  utils.go
middleware/board/: board.go  coord.go  utils.go
middleware/games/: database.go  games.go  handlers.go  solver.go  utils.go
middleware/init-db/: init.sql
rules-page/: Dockerfile  package.json  webpack.config.js
rules-page/src/: index.html
solver/: CMakeLists.txt  Dockerfile  algo_ofek.cpp  algo_ofek.js  board.hpp  board_fast.hpp  bot1.cpp  bot2.cpp  bot3.cpp  bot_pvp.cpp  coord.hpp  crow_all.h  main.cpp  monte_carlo_tree_simple.cpp  pvp  test.cpp
solver/board/: board.hpp  board_fast.hpp  board_fastest.hpp  calc_masks.py  eval_boards.cpp
solver/impls/: algo_ofek.cpp  algo_ofek.h  eval_impls.cpp  find_best_coefs.cpp  mcts.cpp  mcts_improved_exploration.cpp  minimax_alpha_beta.cpp  minimax_better_eval.cpp  minimax_better_formula.cpp  monte_carlo_tree_simple.cpp  random.cpp  run  scorer_evals.cpp
solver/research/: UltimateTicTacToeMiniMax.py  algo_ofek.js  monte_carlo_tree_simple.cpp
tests/: go.mod  integration_test.go
title-page/: Dockerfile  package-lock.json  package.json
title-page/src/: index.html
(+7 files in other folders)
